--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   geocoding: ^4.0.0
   video_player: ^2.10.0
   url_launcher: ^6.3.2
+  image_picker: ^1.2.0
 
 dev_dependencies:
   flutter_test:
