--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   video_player: ^2.10.0
   url_launcher: ^6.3.2
   image_picker: ^1.2.0
+  geolocator: ^14.0.2
 
 dev_dependencies:
   flutter_test:
