--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   cbl: ^3.6.0+2
   cbl_flutter: ^3.3.5
   cbl_flutter_ce: ^3.5.1
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
