--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   latlong2: ^0.9.1
   geocoding: ^4.0.0
   video_player: ^2.10.0
-  audioplayers: ^6.5.1
+  # audioplayers: ^6.5.1
   url_launcher: ^6.3.2
   image_picker: ^1.2.0
   geolocator: ^14.0.2
@@ -46,6 +46,9 @@ dependencies:
   cbl_flutter: ^3.3.5
   cbl_flutter_ce: ^3.5.1
   uuid: ^4.5.1
+  path_provider: ^2.1.5
+  sqflite: ^2.4.2
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
